# Hackathon_Conform_IT

./: .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  Pipfile  README.md  ici.json  setup.cfg
hackathon_conform_it/: __init__.py  justinLib.py  main.py  models.py  nodeExec.py  nodeFactory.py  nodes.py  trucNul.py
tests/: __init__.py  basic_test.py
tmp/: out.json
