[metadata]
name = BanKing
version = 1.0
description = Banking Visualisation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Justin-Aubin/BanKing.git
author = Justin AUBIN
author_email = aub.justin@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: MIT
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: French
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.9
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    docs
    docs.*
    tests
    tests.*

[options.entry_points]
console_scripts =
    src=template:main

[options.extras_require]
dev =
    black
    isort
    pre-commit
    pydocstyle
    pylint
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --showlocals
    --cov=.

[coverage:run]
omit =
    tests/*
    setup.py

[coverage:report]
show_missing = true
exclude_lines =
    if __name__ == .__main__.:
